--- a/src/components/Profile/Posts/Post/Post.module.css
+++ b/src/components/Profile/Posts/Post/Post.module.css
@@ -1,8 +1,4 @@
-.content{
-    grid-area: c;
-    background-color: cornflowerblue;
-  }
-
-.content img{
-    width: 300px;
+.item{
+  width: 200px;
+  border-radius: 30px;
 }
